--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security:3.1.2'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server:3.1.3'
     implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc:3.1.4'
+    implementation 'org.springframework.boot:spring-boot-starter-validation:3.1.3'
     implementation 'io.r2dbc:r2dbc-postgresql:0.8.13.RELEASE'
     implementation 'org.flywaydb:flyway-core:9.22.2'
     implementation 'org.postgresql:postgresql:42.6.0'
