--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,8 +17,11 @@ spring:
     password: password
   flyway:
     url: jdbc:postgresql://localhost:5432/db_message
-  kafka:
-    bootstrap-servers: localhost:9092
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: root
+    password: password
 eureka:
   client:
     register-with-eureka: true
