--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     implementation 'io.r2dbc:r2dbc-postgresql:0.8.13.RELEASE'
     implementation 'org.flywaydb:flyway-core:9.22.2'
     implementation 'org.postgresql:postgresql:42.6.0'
-    implementation 'org.springframework.kafka:spring-kafka:3.0.11'
+    implementation 'org.springframework.boot:spring-boot-starter-amqp:3.1.5'
     compileOnly 'org.projectlombok:lombok:1.18.28'
     annotationProcessor 'org.projectlombok:lombok:1.18.28'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
